início da view do wizard de transaç~]ao

--- a/syst/SPA/impl/src/app/components/transaction-item/template.html
+++ b/syst/SPA/impl/src/app/components/transaction-item/template.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="transaction-item-template">
 
 	<td>
-		<a href="wizard_A_01.html" title="Executar Transação de Dados"><%- scd.attributes.name%></a>
+		<a href="#" title="Executar Transação de Dados"><%- name %></a>
 	</td>													
 	<td>
 		<%- sourceDataset.attributes.name %>
