--- a/syst/SPA/impl/src/app/components/new-dataset/template.html
+++ b/syst/SPA/impl/src/app/components/new-dataset/template.html
@@ -1,66 +1,62 @@
 <script type="text/template" id="new-dataset-template">
-<div class="widget-header bg-seashell js-new-dataset-header">
-	<div class="widget-buttons buttons-bordered hidden-print" style="display:none">
-		<span><a class="btn btn-primary btn-md js-new-dataset-edit-button">Editar</a></span>
-	</div>
-	<div class="widget-buttons buttons-bordered hidden-print">
-		<span><a class="btn btn-primary btn-md js-new-dataset-save-button">Salvar</a></span>
-	</div>									
-	<div class="widget-buttons buttons-bordered hidden-print">									
-		<span><a class="btn btn-default btn-sm js-new-dataset-cancel-button">Cancelar</a></span>		
-	</div>									
-</div>
-	<fieldset class="bordered">
-		<div>
-			<div class="row">
-				<div class="col-sm-6">
-					<div class="form-group">
-						<label for="new-dataset-name" class="control-label">Nome <sup>*</sup></label>
-						<span contenteditable="true" type="text" class="form-control" id="new-dataset-name">
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<div class="form-group">
-						<label for="new-dataset-conector-select" class="control-label">Conector <sup>*</sup></label>
-						<select class="form-control" name="new-dataset-conector-select" >		
-							<option>CSV</option>
-							<option>MySQL</option>
-							<option>SOLR</option>
-						</select>
-					</div>
-				</div>							
+
+	<div class="widget no-header radius-bordered">
+		<div class="widget-body">
+		
+			<div class="well well-sm attached top text-right">
+				<a class="btn btn-default js-new-dataset-cancel">Cancelar</a>									
+				<button class="btn btn-primary js-new-dataset-save" type="button">Salvar</button>
 			</div>
-			
-			<!--<div class="row">
-				<div class="col-sm-6">
-					<div class="form-group">
-						<label for="0005" class="control-label">URL <sup>*</sup></label>
-						<input type="text" class="form-control" name="0005">
+
+			<div class="well attached">
+				<div class="row">
+					<div class="col-sm-6">
+						<div class="form-group simula_validacao">
+							<label class="control-label" for="name">Nome <sup>*</sup></label>
+							<input type="text" name="name" class="js-new-dataset-name form-control">
+						</div>
 					</div>
+					<div class="col-sm-6 col-md-3">
+						<div class="form-group">
+							<label class="control-label" for="dataset">Conector <sup>*</sup></label>
+							<select name="dataset" class="form-control select js-new-dataset-type">
+								<option>Selecione</option>
+								<option>CSV</option>
+								<option>MySQL</option>
+								<option>SOLR</option>
+							</select>
+						</div>
+					</div>							
 				</div>
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="0006" class="control-label">Porta <sup>*</sup></label>
-						<input type="text" class="form-control" id="0006">
+				
+				<div class="row js-new-dataset-fieldset js-new-dataset-csv-fieldset">
+					<div class="col-sm-6">
+						<div class="form-group">
+							<label class="control-label" for="line">Separador de linha </label>
+							<input type="text" name="line" class="form-control" value="\r\n">
+						</div>
 					</div>
-				</div>												
+					<div class="col-sm-3">
+						<div class="form-group simula_validacao">
+							<label class="control-label" for="field">Separador de campo </label>
+							<input type="text" id="field" class="form-control" value=";">
+						</div>
+					</div>												
+				</div>
+				
+				
+
+			
 			</div>
-			
-			<div class="row">
-				<div class="col-sm-6 col-md-3">
-					<div class="form-group">
-						<label for="0007" class="control-label">Usuário <sup>*</sup></label>
-						<input type="text" class="form-control" id="0007">
-					</div>
-				</div>
-				<div class="col-sm-6 col-md-3">
-					<div class="form-group">
-						<label for="0008" class="control-label">Senha <sup>*</sup></label>
-						<input type="password" class="form-control" id="0008">
-					</div>
-				</div>												
-			</div>													
+
+			<div class="well well-sm attached bottom text-right">
+				<a class="btn btn-default js-new-dataset-cancel">Cancelar</a>									
+				<button class="btn btn-primary js-new-dataset-save" type="button">Salvar</button>
+			</div>										
+				
 		</div>
-		-->
-	</fieldset>
+	</div>
+
+
+
 </script>
