--- a/syst/SPA/impl/src/app/components/new-dataset/template.html
+++ b/syst/SPA/impl/src/app/components/new-dataset/template.html
@@ -33,13 +33,13 @@
 					<div class="col-sm-6">
 						<div class="form-group">
 							<label class="control-label" for="line">Separador de linha </label>
-							<input type="text" name="line" class="form-control" value="\r\n">
+							<input type="text" name="line" class="form-control js-new-dataset-csv-line-separator" value="\r\n">
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="form-group simula_validacao">
 							<label class="control-label" for="field">Separador de campo </label>
-							<input type="text" id="field" class="form-control" value=";">
+							<input type="text" id="field" class="form-control js-new-dataset-csv-field-separator" value=";">
 						</div>
 					</div>												
 				</div>
