--- a/syst/SPA/impl/src/app/components/transaction-create-update/template.html
+++ b/syst/SPA/impl/src/app/components/transaction-create-update/template.html
@@ -2,22 +2,22 @@
 
 
 	<!-- wizard -->
-	<div id="simplewizardinwidget" class="wizard" data-target="#simplewizardinwidget-steps">
-		<ul class="steps">
+	<div id="simplewizardinwidget" class="wizard js-transaction-create-update-wizard" data-target="#simplewizardinwidget-steps">
+		<ul class="steps js-transaction-create-update-step-icons">
 			<li data-target="#simplewizardinwidgetstep1" class="active"><span class="step">1</span>Etapa 1<span class="chevron"></span></li>
 			<li data-target="#simplewizardinwidgetstep2"><span class="step">2</span>Etapa 2<span class="chevron"></span></li>
 			<li data-target="#simplewizardinwidgetstep3"><span class="step">3</span>Etapa 3<span class="chevron"></span></li>
 			<li data-target="#simplewizardinwidgetstep4"><span class="step">4</span>Etapa 4<span class="chevron"></span></li>
 		</ul>
-		<div class="actions" id="simplewizardinwidget-actions">
+		<div class="actions js-transaction-create-udpate-actions" id="simplewizardinwidget-actions">
 			<button type="button" class="btn btn-default btn-sm shiny btn-prev "> <i class="fa fa-angle-left"></i>Anterior</button>
 			<button type="button" class="btn btn-default btn-sm shiny btn-next " data-last="Concluir">Próximo<i class="fa fa-angle-right"></i></button>
 		</div>
 	</div>
-	<div class="step-content" id="simplewizardinwidget-steps">
+	<div class="step-content js-transaction-create-udpate-steps"   id="simplewizardinwidget-steps">
 		
 		<!-- passo 1 -->
-		<div class="step-pane active" id="simplewizardinwidgetstep1">
+		<div class="step-pane js-transaction-create-update-step active" id="simplewizardinwidgetstep1">
 			
 			<fieldset class="bordered">
 				<div class="row">
@@ -271,7 +271,7 @@
 		
 		
 		<!-- passo 2 -->
-		<div class="step-pane" id="simplewizardinwidgetstep2">
+		<div class="step-pane js-transaction-create-update-step" id="simplewizardinwidgetstep2">
 			<fieldset class="bordered">
 				<div class="row">
 					<div class="col-sm-12 col-md-6">
@@ -303,7 +303,7 @@
 		
 		
 		<!-- passo 3 -->
-		<div class="step-pane" id="simplewizardinwidgetstep3">
+		<div class="step-pane js-transaction-create-update-step" id="simplewizardinwidgetstep3">
 			<fieldset class="bordered">
 			
 				<div class="control-group">
@@ -643,7 +643,7 @@
 		
 		
 		<!-- passo 4 -->
-		<div class="step-pane" id="simplewizardinwidgetstep4">
+		<div class="step-pane js-transaction-create-update-step" id="simplewizardinwidgetstep4">
 			
 			<fieldset class="bordered">
 				<div class="row">
