--- a/syst/SPA/impl/src/app/components/dataset-create-update/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-create-update/template.html
@@ -2,13 +2,12 @@
 
 	<div class="widget no-header radius-bordered">
 		<div class="widget-body">
-		
 			<div class="well well-sm attached top text-right js-dataset-create-update-header">
 				<a class="btn btn-default js-dataset-create-update-cancel">Cancelar</a>									
 				<button class="btn btn-primary js-dataset-create-update-save" type="button">Salvar</button>
 			</div>
 
-			<div class="well attached">
+			<div class="well attached js-main">
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="form-group simula_validacao">
@@ -93,16 +92,12 @@
 																
 					</div>
 				</div>
-				
-				
+		</div>
 
-			
-			</div>
-
-			<div class="well well-sm attached bottom text-right js-dataset-create-update-header">
-				<a class="btn btn-default js-dataset-create-update-cancel">Cancelar</a>									
-				<button class="btn btn-primary js-dataset-create-update-save" type="button">Salvar</button>
-			</div>										
+		<div class="well well-sm attached bottom text-right js-dataset-create-update-header">
+			<a class="btn btn-default js-dataset-create-update-cancel">Cancelar</a>									
+			<button class="btn btn-primary js-dataset-create-update-save" type="button">Salvar</button>
+		</div>										
 				
 		</div>
 	</div>
