--- a/syst/SPA/impl/src/app/components/transaction-create-update/template.html
+++ b/syst/SPA/impl/src/app/components/transaction-create-update/template.html
@@ -117,8 +117,9 @@
 		<!-- /passo 1 -->
 
 		<!-- passo 1 -->
-		<div class="step-pane" id="simplewizardinwidgetstep2">			
-			<h3>Parabéns</h3>
+		<div class="step-pane js-step-2" id="simplewizardinwidgetstep2">	
+					
+			
 		</div>
 		<!-- /passo 1 -->
 		
