--- a/syst/SPA/impl/src/app/components/dataset-create-update/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-create-update/template.html
@@ -57,7 +57,7 @@
 
 				<div class="js-dataset-create-update-fieldset js-dataset-create-update-solr-fieldset">
 					<div class="row">
-						<div class="col-sm-7">
+						<div class="col-sm-6">
 							<div class="form-group">
 								<label class="control-label" for="line">Servidor </label>
 								<input type="text" id="field" class="form-control js-dataset-create-update-solr-host">
@@ -65,7 +65,12 @@
 
 							</div>
 						</div>
-						
+						<div class="col-sm-4">
+							<div class="form-group simula_validacao">
+								<label class="control-label" for="field">Core </label>
+								<input type="text" id="field" class="form-control js-dataset-create-update-solr-core">
+							</div>
+						</div>
 						<div class="col-sm-2">
 							<div class="form-group simula_validacao">
 								<label class="control-label" for="field">Porta HTTP</label>
@@ -74,10 +79,18 @@
 						</div>													
 					</div>
 					<div class="row">
-						<div class="col-sm-7">
+						<div class="col-sm-5">
+							<div class="form-group">
+								<label class="control-label" for="line">Usuário FTP </label>
+								<input type="text" id="field" class="form-control js-dataset-create-update-solr-host">
+						
+
+							</div>
+						</div>
+						<div class="col-sm-5">
 							<div class="form-group simula_validacao">
-								<label class="control-label" for="field">Core </label>
-								<input type="text" id="field" class="form-control js-dataset-create-update-solr-core">
+								<label class="control-label" for="field">Senha FTP </label>
+								<input type="password" id="field" class="form-control js-dataset-create-update-solr-core">
 							</div>
 						</div>
 						<div class="col-sm-2">
