--- a/syst/SPA/impl/src/app/components/transaction-list-item/template.html
+++ b/syst/SPA/impl/src/app/components/transaction-list-item/template.html
@@ -1,7 +1,7 @@
 <script type="text/template" id="transaction-list-item-template">
 
 	<td>
-		<a><%- name %></a>
+		<a class="js-link" href="#"><%- name %></a>
 	</td>													
 	<td class="js-source-name">
 		<% if(app.isDefined(sourceDataset)) {	%>
