--- a/syst/SPA/impl/src/app/components/dataset-list-item/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-list-item/template.html
@@ -7,7 +7,7 @@
 		<%- conector %>
 	</td>
 	<td class="js-new-dataset-list-item-host">
-		<%- server.attributes.host %>		
+		<%- server.attributes.host || " - " %>		
 	</td>
 	<td class="hidden-print">
 		<a href="#" class="btn bg-silver btn-xs icon-only white js-new-dataset-list-item-details" href="#" title="Detalhes">
