--- a/syst/SPA/impl/src/app/components/dataset-list/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-list/template.html
@@ -3,7 +3,7 @@
 		<div class="widget-header bg-seashell">
 			<span class="widget-caption silver"> <%- title %> </span>
 			<div class="widget-buttons buttons-bordered hidden-print">
-				<span><a class="btn btn-default btn-sm js-dataset-list-new" href="#"> <%- button %> </a></span>
+				<span><a class="btn btn-default btn-sm js-new" href="#"> <%- button %> </a></span>
 			</div>									
 			<div class="widget-buttons buttons-bordered hidden-print">									
 				<a data-toggle="maximize" href="#">
@@ -34,7 +34,7 @@
 							<th class="hidden-print min-width"></th>
 						</tr>
 					</thead>
-					<tbody class="js-dataset-list-list">
+					<tbody class="js-list">
 						
 					</tbody>
 				</table>
