--- a/syst/SPA/impl/src/app/components/dataset-create-update/template.html
+++ b/syst/SPA/impl/src/app/components/dataset-create-update/template.html
@@ -1,28 +1,34 @@
 <script type="text/template" id="dataset-create-update-template">
-
+<style>
+	.js-fieldset{
+		display: none;
+	}
+</style>
+<% if(options.showHeader) { %>
 	<div class="widget no-header radius-bordered">
 		<div class="widget-body">
-			<div class="well well-sm attached top text-right js-dataset-create-update-header">
-				<a class="btn btn-default js-dataset-create-update-cancel">Cancelar</a>									
-				<button class="btn btn-primary js-dataset-create-update-save" type="button">Salvar</button>
+			<div class="well well-sm attached top text-right js-header">
+				<a class="btn btn-default js-cancel">Cancelar</a>									
+				<button class="btn btn-primary js-save" type="button">Salvar</button>
 			</div>
+<% } %>
 
 			<div class="well attached js-main">
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="form-group simula_validacao">
 							<label class="control-label" for="name">Nome <sup>*</sup></label>
-							<input type="text" name="name" class="js-dataset-create-update-name form-control">
+							<input type="text" name="name" class="js-name form-control">
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-3">
 						<div class="form-group">
 							<label class="control-label" for="dataset">Conector <sup>*</sup></label>
-							<select name="dataset" class="form-control select js-dataset-create-update-conector">
+							<select name="dataset" class="form-control select js-conector">
 								<option>Selecione</option>
-								<option>CSV</option>
-								<option>MySQL</option>
-								<option>SOLR</option>
+								<% for(var i = 0; i < types.length; i ++){ %>
+									<option value="<%- types[i].value %>"><%- types[i].caption %></option>
+								<%}%>
 							</select>
 							
 						</div>
@@ -32,11 +38,11 @@
 				<!-- CSV ---------------------------------------------------------------------------->
 				<!----------------------------------------------------------------------------------->
 
-				<div class="row js-dataset-create-update-fieldset js-dataset-create-update-csv-fieldset">
+				<div class="row js-fieldset js-csv-fieldset">
 					<div class="col-sm-6">
 						<div class="form-group">
 							<label class="control-label" for="line">Separador de linha </label>
-							<select name="line" class="form-control select js-dataset-create-update-csv-line-separator">
+							<select name="line" class="form-control select js-csv-line-separator">
 								<option value="&#14&#10" selected>Windows</option>
 								<option value "&#10">Unix</option>								
 							</select>
@@ -47,7 +53,7 @@
 					<div class="col-sm-3">
 						<div class="form-group simula_validacao">
 							<label class="control-label" for="field">Separador de campo </label>
-							<input type="text" id="field" class="form-control js-dataset-create-update-csv-field-separator" value=";">
+							<input type="text" id="field" class="form-control js-csv-field-separator" value=";">
 						</div>
 					</div>												
 				</div>
@@ -55,12 +61,12 @@
 				<!-- SOLR---------------------------------------------------------------------------->
 				<!----------------------------------------------------------------------------------->
 
-				<div class="js-dataset-create-update-fieldset js-dataset-create-update-solr-fieldset">
+				<div class="js-fieldset js-solr-fieldset">
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="form-group">
 								<label class="control-label" for="line">Servidor </label>
-								<input type="text" id="field" class="form-control js-dataset-create-update-solr-host">
+								<input type="text" id="field" class="form-control js-solr-host">
 						
 
 							</div>
@@ -68,35 +74,35 @@
 						<div class="col-sm-4">
 							<div class="form-group simula_validacao">
 								<label class="control-label" for="field">Core </label>
-								<input type="text" id="field" class="form-control js-dataset-create-update-solr-core">
+								<input type="text" id="field" class="form-control js-solr-core">
 							</div>
 						</div>
 						<div class="col-sm-2">
 							<div class="form-group simula_validacao">
 								<label class="control-label" for="field">Porta HTTP</label>
-								<input type="number" min="0" max ="65535" id="field" class="form-control js-dataset-create-update-solr-port" value="80">
+								<input type="number" min="0" max ="65535" id="field" class="form-control js-solr-port" value="80">
 							</div>
 						</div>													
 					</div>
 					<div class="row">
 						<div class="col-sm-5">
 							<div class="form-group">
-								<label class="control-label" for="line">Usuário FTP </label>
-								<input type="text" id="field" class="form-control js-dataset-create-update-solr-host">
+								<label class="control-label" for="line">Usuário</label>
+								<input type="text" id="field" class="form-control js-solr-user">
 						
 
 							</div>
 						</div>
 						<div class="col-sm-5">
 							<div class="form-group simula_validacao">
-								<label class="control-label" for="field">Senha FTP </label>
-								<input type="password" id="field" class="form-control js-dataset-create-update-solr-core">
+								<label class="control-label" for="field">Senha FTP/SSH </label>
+								<input type="password" id="field" class="form-control js-solr-pass">
 							</div>
 						</div>
 						<div class="col-sm-2">
 							<div class="form-group">
-								<label class="control-label" for="line">Porta FTP</label>
-								<input type="number" min="0" max ="65535" id="field" class="form-control js-dataset-create-update-solr-ftp" value="22">
+								<label class="control-label" for="line">Porta FTP/SSH</label>
+								<input type="number" min="0" max ="65535" id="field" class="form-control js-solr-ftp" value="22">
 						
 
 							</div>
@@ -107,13 +113,15 @@
 				</div>
 		</div>
 
-		<div class="well well-sm attached bottom text-right js-dataset-create-update-header">
-			<a class="btn btn-default js-dataset-create-update-cancel">Cancelar</a>									
-			<button class="btn btn-primary js-dataset-create-update-save" type="button">Salvar</button>
+		<div class="well well-sm attached bottom text-right js-header">
+			<a class="btn btn-default js-cancel">Cancelar</a>									
+			<button class="btn btn-primary js-save" type="button">Salvar</button>
 		</div>										
-				
+		
+<% if(options.showHeader) { %>		
 		</div>
 	</div>
+<% }  %>
 
 
 
